made bg image on mobile stop repeating/positioned properly

--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 /* 
-- Mobile: 375px
-- Desktop: 1440px
-
 Heading:
 - Family: [Poppins](https://fonts.google.com/specimen/Poppins)
 - Weights: 400, 600
@@ -9,8 +6,6 @@ Heading:
 Body:
 - Family: [Open Sans](https://fonts.google.com/specimen/Open+Sans)
 - Weights: 400
-
-
 */
 
 :root {
@@ -126,9 +121,10 @@ header {
   }
 
   body {
-    background-image: url("images/bg-mobile.svg");
-    background-size: cover;
-    background-position: center;
+    background-image: url(images/bg-mobile.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
   }
 
   .intro {
